Change image source, logo, and names

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <nav>
-      <h1 class="logo">John</h1>
+      <h1 class="logo">Majay</h1>
       <ul class="nav-links" aria-label="navigation links">
         <li>
           <a href="#">Home</a>
@@ -37,7 +37,7 @@
       <section class="introduction" aria-label="introduction">
         <p class="highlight greet">Hi there!</p>
         <div class="name">
-          <h1>John Oluwalusi</h1>
+          <h1>Jonathan Gomina</h1>
           <h2>I love building things with code.</h2>
         </div>
         <div class="me">
@@ -63,7 +63,7 @@
         <div class="about-me-body">
           <div class="about-me-content">
             <p>
-              Howdy! I&apos;m John Oluwalusi. A web & mobile app developer, who
+              Howdy! I&apos;m Majay. A web & mobile app developer, who
               enjoys building, learning and exploring things that live on the
               web.
             </p>
@@ -94,7 +94,7 @@
           </div>
           <div class="profile-image">
             <div class="image-wrapper">
-              <img src="./assets/images/John.jpg" alt="John Oluwalusi" />
+              <img src="https://ibb.co/XFp14kG" alt="Majay" />
             </div>
           </div>
         </div>
