Replace image link

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           </div>
           <div class="profile-image">
             <div class="image-wrapper">
-              <img src="https://ibb.co/XFp14kG" alt="Majay" />
+              <img src="https://i.postimg.cc/YCbw44Qc/IMG-20220718-082627.jpg" alt="Majay" />
             </div>
           </div>
         </div>
