--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           </p>
         </div>
         <div aria-label="hire me" class="hire-me">
-          <button class="btn btn-outlined">Hire me</button>
+          <a href="https://jonathangomina5049@gmail.com" class="btn btn-outlined">Hire me</a>
         </div>
       </section>
       <section class="about-me">
